fixed dropdown alignment and allowed for accents and any case

--- a/my-app/public/styles.css
+++ b/my-app/public/styles.css
@@ -105,7 +105,7 @@ body {
   text-transform: lowercase;
 }
 
-p.section-text {
+.section-text {
   color: #666; 
   font-size: 1vw;
   line-height: 1.5; 
