--- a/my-app/src/AutoComplete.css
+++ b/my-app/src/AutoComplete.css
@@ -4,16 +4,15 @@
 }
 
 #food-input {
-  max-width: 10vw;
+  width: 12vw;
 }
 
 .suggestions {
-  margin: auto;
   position: absolute;
   top: 100%;
   text-align: center;
-  max-height: 200px; /* Set the maximum height */
-  width: 10vw;
+  max-height: 200px; 
+  width: 12.35vw;
   background-color: #fff;
   border: 1px solid #ccc;
   list-style: none;
@@ -22,6 +21,7 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   overflow-y: auto; /* Enable vertical scroll when content exceeds max-height */
   display: block;
+  margin-left: 21.6%;
 }
 
 .suggestions li {
@@ -30,4 +30,8 @@
 
 .suggestions li:hover {
   background-color: #f5f5f5;
+}
+
+.dropdown-wrapper {
+  text-align: center;
 }
